# mpdspg

./: .gitignore  mpdspl.py  pyproject.toml  requirements.txt
mpdspg/: label.py  label_cmd.py  main.py
