[tool.poetry]
name = "mpdspg"
version = "0.1.0"
description = "MPD stored playlist generator"
authors = ["David Hoyes <dphoyes@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
python-mpd2 = { git = "https://github.com/Mic92/python-mpd2.git", rev = "454907ac10a5b967e84f4172d0f6122bf68962bc" }
aiohttp = "^3.8.3"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
mpdspg = 'mpdspg:main'
mpdspg-label = 'mpdspg.label_cmd:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
